--- a/ville.html
+++ b/ville.html
@@ -1951,7 +1951,7 @@
             </div>
             
             <div class="copyright">
-                <p>&copy; 2025 Mairie de Saint-Louis/BCMGROUP| <a href="#" style="color: var(--accent-color); text-decoration: none;">Mentions légales</a> | <a href="#" style="color: var(--accent-color); text-decoration: none;">Politique de confidentialité</a></p>
+                <p>&copy; 2025 Mairie de Saint-Louis/BCMGROUP</a></p>
             </div>
         </div>
     </footer>
