--- a/blog.html
+++ b/blog.html
@@ -29,6 +29,7 @@
                     <li><a href="ville.html">Histoire & Patrimoine</a></li>
                     <li><a href="mairie.html">La Ville</a></li>
                     <li><a href="demarches.html">Démarches</a></li>
+                    <li><a href="hotel-ville.html">Hotel-Ville</a></li>
                     <li><a href="blog.html"><i class="fas fa-newspaper"></i> Blog</a></li>
                     <li><a href="contact.html">Contact</a></li>
                 </ul>
@@ -47,6 +48,7 @@
                 <li><a href="ville.html">Patrimoine</a></li>
                 <li><a href="mairie.html">La Ville</a></li>
                 <li><a href="demarches.html">Démarches</a></li>
+                <li><a href="hotel-ville.html">Hotel-Ville</a></li>
                 <li><a href="blog.html"><i class="fas fa-newspaper"></i> Blog</a></li>
                 <li><a href="contact.html">Contact</a></li>
             </ul>
@@ -421,6 +423,7 @@
                         <li><a href="ville.html"><i class="fas fa-landmark"></i> Patrimoine</a></li>
                         <li><a href="mairie.html"><i class="fas fa-university"></i> La Ville</a></li>
                         <li><a href="demarches.html"><i class="fas fa-file-alt"></i> Démarches</a></li>
+                        <li><a href="hotel-ville.html">Hotel-Ville</a></li>
                         <li><a href="blog.html"><i class="fas fa-newspaper"></i> Blog</a></li>
                         <li><a href="contact.html"><i class="fas fa-envelope"></i> Contact</a></li>
                     </ul>
@@ -437,7 +440,7 @@
             </div>
             
             <div class="copyright">
-                <p>&copy; 2024 Mairie de Saint-Louis - Tous droits réservés</p>
+                <p>&copy; 2025 Mairie de Saint-Louis - Tous droits réservés</p>
                 <p style="margin-top: 8px; font-size: 0.85rem; color: #888;">
                     Site développé avec <i class="fas fa-heart" style="color: #ff6b6b;"></i> par BCM group
                 </p>
