--- a/contact.html
+++ b/contact.html
@@ -1013,6 +1013,7 @@
                     <li><a href="ville.html">La Ville</a></li>
                     <li><a href="mairie.html">Histoire & Patrimoine</a></li>
                     <li><a href="demarches.html">Démarches</a></li>
+                    <li><a href="hotel-ville.html">Hotel-Ville</a></li>
                     <li><a href="blog.html"><i class="fas fa-newspaper"></i> Blog</a></li>
                     <li><a href="contact.html" class="active">Contact</a></li>
                 </ul>
@@ -1031,6 +1032,7 @@
                 <li><a href="ville.html">La Ville</a></li>
                 <li><a href="mairie.html">Histoire & Patrimoine</a></li>
                 <li><a href="demarches.html">Démarches</a></li>
+                <li><a href="hotel-ville.html">Hotel-Ville</a></li>
                 <li><a href="blog.html"><i class="fas fa-newspaper"></i> Blog</a></li>
                 <li><a href="contact.html" class="active">Contact</a></li>
             </ul>
@@ -1320,6 +1322,8 @@
                         <li><a href="ville.html">La Ville</a></li>
                         <li><a href="mairie.html">Histoire & Patrimoine</a></li>
                         <li><a href="demarches.html">Démarches en ligne</a></li>
+                        <li><a href="hotel-ville.html">Hotel-Ville</a></li>
+                        <li><a href="blog.html">Blog</a></li>
                         <li><a href="contact.html">Contact</a></li>
                     </ul>
                 </div>
