--- a/demarches.html
+++ b/demarches.html
@@ -29,6 +29,7 @@
                     <li><a href="index.html">Accueil</a></li>
                     <li><a href="ville.html">La Ville</a></li>
                     <li><a href="mairie.html">Histoire & Patrimoine</a></li>
+                    <li><a href="hotel-ville.html">Hotel-Ville</a></li>
                     <li class="dropdown">
                         <a href="demarches.html">Démarches en ligne <i class="fas fa-chevron-down"></i></a>
                         <div class="dropdown-menu">
@@ -55,6 +56,7 @@
                 <li><a href="index.html">Accueil</a></li>
                 <li><a href="ville.html">La Ville</a></li>
                 <li><a href="mairie.html">Histoire & Patrimoine</a></li>
+                <li><a href="hotel-ville.html">Hotel-Ville</a></li>
                 <li class="mobile-dropdown">
                     <a href="demarches.html" class="active">Démarches en ligne <i class="fas fa-chevron-down"></i></a>
                     <ul class="mobile-submenu">
@@ -292,6 +294,7 @@
                         <li><a href="ville.html">La Ville</a></li>
                         <li><a href="mairie.html">Histoire & Patrimoine</a></li>
                         <li><a href="demarches.html">Démarches en ligne</a></li>
+                        <li><a href="hotel-ville.html">Hotel-Ville</a></li>
                         <li><a href="blog.html"><i class="fas fa-newspaper"></i> Blog</a></li>
                         <li><a href="contact.html">Contact</a></li>
                     </ul>
