--- a/mairie.html
+++ b/mairie.html
@@ -32,6 +32,7 @@
                     <li><a href="ville.html">Histoire & patrimoine</a></li>
                     <li><a href="mairie.html" class="active">La Ville</a></li>
                     <li><a href="demarches.html">Démarches en ligne</a></li>
+                    <li><a href="hotel-ville.html">Hotel-Ville</a></li>
                     <li><a href="blog.html"><i class="fas fa-newspaper"></i> Blog</a></li>
                     <li><a href="contact.html">Contact</a></li>
                 </ul>
@@ -50,6 +51,7 @@
                 <li><a href="ville.html">Histoire & patrimoine</a></li>
                 <li><a href="mairie.html" class="active">La Ville</a></li>
                 <li><a href="demarches.html">Démarches en ligne</a></li>
+                <li><a href="hotel-ville.html">Hotel-Ville</a></li>
                 <li><a href="blog.html"><i class="fas fa-newspaper"></i> Blog</a></li>
                 <li><a href="contact.html">Contact</a></li>
             </ul>
@@ -349,6 +351,7 @@
                         <li><a href="ville.html">La Ville</a></li>
                         <li><a href="mairie.html">Histoire & patrimoine</a></li>
                         <li><a href="demarches.html">Démarches en ligne</a></li>
+                        <li><a href="hotel-ville.html">Hotel-Ville</a></li>
                         <li><a href="blog.html"><i class="fas fa-newspaper"></i> Blog</a></li>
                         <li><a href="contact.html">Contact</a></li>
                     </ul>
