--- a/ville.html
+++ b/ville.html
@@ -31,6 +31,7 @@
                     <li><a href="ville.html" class="active">Histoire & Patrimoine</a></li>
                     <li><a href="mairie.html">La Ville</a></li>
                     <li><a href="demarches.html">Démarches</a></li>
+                    <li><a href="hotel-ville.html">Hotel-Ville</a></li>
                     <li><a href="blog.html"><i class="fas fa-newspaper"></i> Blog</a></li>
                     <li><a href="contact.html">Contact</a></li>
                 </ul>
@@ -49,6 +50,7 @@
                 <li><a href="ville.html" class="active">Histoire & Patrimoine</a></li>
                 <li><a href="mairie.html">La Ville</a></li>
                 <li><a href="demarches.html">Démarches</a></li>
+                <li><a href="hotel-ville.html">Hotel-Ville</a></li>
                 <li><a href="blog.html"><i class="fas fa-newspaper"></i> Blog</a></li>
                 <li><a href="contact.html">Contact</a></li>
             </ul>
@@ -483,6 +485,7 @@
                         <li><a href="ville.html" class="active"><i class="fas fa-city"></i> La Ville</a></li>
                         <li><a href="mairie.html"><i class="fas fa-landmark"></i> Histoire & Patrimoine</a></li>
                         <li><a href="demarches.html"><i class="fas fa-file-alt"></i> Démarches en ligne</a></li>
+                        <li><a href="hotel-ville.html">Hotel-Ville</a></li>
                         <li><a href="blog.html"><i class="fas fa-newspaper"></i> Blog</a></li>
                         <li><a href="contact.html"><i class="fas fa-envelope"></i> Contact</a></li>
                     </ul>
