--- a/demarches.html
+++ b/demarches.html
@@ -27,8 +27,8 @@
             <nav class="desktop-nav">
                 <ul>
                     <li><a href="index.html">Accueil</a></li>
-                    <li><a href="ville.html">La Ville</a></li>
                     <li><a href="mairie.html">Histoire & Patrimoine</a></li>
+                    <li><a href="ville.html">La Ville</a></li>
                     <li><a href="hotel-ville.html">Hotel-Ville</a></li>
                     <li class="dropdown">
                         <a href="demarches.html">Démarches en ligne <i class="fas fa-chevron-down"></i></a>
@@ -40,6 +40,8 @@
                             <a href="demarches.html#contact-maire">Contact avec le Maire</a>
                         </div>
                     </li>
+                    <li><a href="hotel-ville.html">Hotel-Ville</a></li>
+                    <li><a href="blog.html"><i class="fas fa-newspaper"></i> Blog</a></li>
                     <li><a href="contact.html">Contact</a></li>
                 </ul>
             </nav>
