--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             <nav class="desktop-nav">
                 <ul>
                     <li><a href="index.html" class="active">Accueil</a></li>
-                    <li><a href="ville.html">Patrimoine</a></li>
+                    <li><a href="ville.html">Histoire & Patrimoine</a></li>
                     <li><a href="mairie.html">La Ville</a></li>
                     <li><a href="demarches.html">Démarches</a></li>
                     <li><a href="hotel-ville.html">Hotel-Ville</a></li>
@@ -116,33 +116,34 @@
     </section>
 
     <!-- Section Maire - TITRE CENTRÉ -->
-    <section class="maire-section">
-        <div class="container">
-            <div class="section-header">
-                <h2 class="section-title">Le Maire de Saint-Louis</h2>
-            </div>
-            <div class="maire-card">
-                <div class="maire-photo-container">
-                    <img src="images/manfay.jpeg" alt="Monsieur Mansour FAYE, Maire de Saint-Louis" class="maire-photo">
-                    <div class="maire-badge">
-                        <div class="maire-nom">Monsieur Mansour FAYE</div>
-                        <div class="maire-fonction">Maire de Saint-Louis</div>
-                    </div>
+    <!-- Section Maire Principal - TITRE CENTRÉ -->
+<section class="principal-maire-section">
+    <div class="container">
+        <div class="section-header">
+            <h2 class="section-title">Le Maire de Saint-Louis</h2>
+        </div>
+        <div class="principal-maire-card">
+            <div class="principal-maire-photo-container">
+                <img src="images/manfay.jpeg" alt="Monsieur Mansour FAYE, Maire de Saint-Louis" class="principal-maire-photo">
+                <div class="principal-maire-badge">
+                    <div class="principal-maire-nom">Monsieur Mansour FAYE</div>
+                    <div class="principal-maire-fonction">Maire de Saint-Louis</div>
                 </div>
-                <div class="maire-content">
-                    <div class="maire-quote">
-                        "Saint-Louis, perle du Sénégal, ville d'histoire tournée vers l'avenir"
-                    </div>
-                    <div class="maire-description">
-                        <p>Chers habitants de Saint-Louis,</p>
-                        <p>C'est avec fierté et détermination que je m'adresse à vous depuis cette plateforme numérique moderne. Notre belle ville, classée au patrimoine mondial de l'UNESCO, mérite une administration à la hauteur de son prestigieux héritage.</p>
-                        <p>Ce portail citoyen vous permet désormais d'effectuer vos démarches administratives en toute simplicité, de suivre les projets municipaux et de rester informés de la vie de votre commune.</p>
-                        <p>Ensemble, construisons l'avenir de Saint-Louis tout en préservant son riche patrimoine historique et culturel.</p>
-                    </div>
+            </div>
+            <div class="principal-maire-content">
+                <div class="principal-maire-quote">
+                    "Saint-Louis, perle du Sénégal, ville d'histoire tournée vers l'avenir"
+                </div>
+                <div class="principal-maire-description">
+                    <p>Chers habitants de Saint-Louis,</p>
+                    <p>C'est avec fierté et détermination que je m'adresse à vous depuis cette plateforme numérique moderne. Notre belle ville, classée au patrimoine mondial de l'UNESCO, mérite une administration à la hauteur de son prestigieux héritage.</p>
+                    <p>Ce portail citoyen vous permet désormais d'effectuer vos démarches administratives en toute simplicité, de suivre les projets municipaux et de rester informés de la vie de votre commune.</p>
+                    <p>Ensemble, construisons l'avenir de Saint-Louis tout en préservant son riche patrimoine historique et culturel.</p>
                 </div>
             </div>
         </div>
-    </section>
+    </div>
+</section>
 
     <!-- NOUVEAU : Section Adjoints avec Carrousel Ultra-Fluide et Automatique -->
     <section class="adjoints-section">
